--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
-  <li><a href="/index.html">Home</a></li>
-    <li><a href="/casestudy.html">My Work</a></li>
-    <li><a href="/about.html">About</a></li>
+  <li><a href="./index.html">Home</a></li>
+    <li><a href="./casestudy.html">My Work</a></li>
+    <li><a href="./about.html">About</a></li>
   </ul>
 </header>
 
@@ -36,6 +36,14 @@ SOME FACTS ABOUT ME!  I've lived in Manila, California, Amsterdam and Berlin. At
 </div>
     
 </main>
+
+<footer class="footer">
+  <a href="#"> Email Me: velmascoob@velma.com</a>
+  <a href="https://www.instagram.com/scoobydoo/"> Instagram</a>
+  <a href="https://www.pinterest.com/scoobydoo/_created/"> Pinterest</a>
+  <a href="https://www.linkedin.com/in/velma-dinkley-7345b56/"> LinkedIn</a>
+</footer>
+
 
 </body>
 </html>
