--- a/casestudy.html
+++ b/casestudy.html
@@ -20,7 +20,7 @@
     <!-- We should unfuck this menu -->
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-    <li><a href=".index.html">Home</a></li>
+    <li><a href="./index.html">Home</a></li>
       <li><a href="./casestudy.html">My Work</a></li>
       <li><a href="./about.html">About</a></li>
     </ul>
@@ -31,13 +31,14 @@
 <h1> My Work</h1>
 </div>
       <div class="CScontainerCcol">
-        <img src="./images/unsplash_ND3edEmzcdQ@2x.png" alt="image did not load"/>
-        <p> <strong>RECIPE CREATION TOOL</strong> <br>
-          Encouraging home cooks to share their recipes within the Kitchen Stories community</p>
+        <img src="./images/cstop.png" alt="image did not load"/>
+        
+        <p> RECIPE CREATION TOOL<br>
+         <small> Encouraging home cooks to share their recipes within the Kitchen Stories community</small></p>
       </div>
   
       <div class="CScontainerCrow">
-        <p> ROLE:
+        <p class="wtf"> ROLE:
           Product Designer <br>
           
           TEAM:
@@ -47,7 +48,7 @@
           Mobile (Android & IOS) <br>
           YEAR: 2021
         </p>
-        <p> Kitchen Stories is a digital cooking platform with content being created by both our editors and users. The product an tech team developed a recipe creation tool that enabled users to share their recipes with 3 million fellow cooking enthusiasts on the Kitchen stories app. </p>
+        <p class="wtf"> Kitchen Stories is a digital cooking platform with content being created by both our editors and users. The product an tech team developed a recipe creation tool that enabled users to share their recipes with 3 million fellow cooking enthusiasts on the Kitchen stories app. </p>
       </div>
   
       <div class="CScontainerCcol">
@@ -58,15 +59,15 @@
       <!-- What is going on with alignment  -->
 
       <div class="CScontainerCrow CSmidIMG">
-        <p>Creating a recipe <br>
+        <p class="wtf">Creating a recipe <br>
           The main feature of this project was to allow the user to publish their recipe on the Kitchen Stories platform through a series of steps. 
           The creation process was designed so that the output would be in the same format as existing Kitchen Stories recipes. </p>
         <img src="./images/unsplash_kcA-c3f_3FE.png" alt="image did not load"/>
       </div>
   
       <div class="CScontainerCrow CSmidIMG">
-        <img src="./images/unsplash_jpkfc5_d-DI.png" alt="image did not load"/>
-        <p> Author Attributes <br>
+        <img src="./images/csl.png" alt="image did not load"/>
+        <p class="wtf"> Author Attributes <br>
           Prior to launch, dish tiles had no assigned author because all recipes were simply developed by the in-house test kitchen. With user recipes now being added to the mix, there was a need to give credit to authors and differentiate recipes 
           that are by Kitchen Stories, brand partners and the community of users.   </p>
       </div>
@@ -84,5 +85,14 @@
         <img src="./images/4.png" alt="image did not load"/>
       </div>
   
+
+<footer class="footer">
+  <a href="#"> Email Me: velmascoob@velma.com</a>
+  <a href="#"> Instagram</a>
+  <a href="#"> Pinterest</a>
+  <a href="#"> LinkedIn</a>
+</footer>
+
+
   </body>
   </html>
