--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- We should unfuck this menu -->
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-    <li><a href=".index.html">Home</a></li>
+    <li><a href="./index.html">Home</a></li>
       <li><a href="./casestudy.html">My Work</a></li>
       <li><a href="./about.html">About</a></li>
     </ul>
@@ -71,11 +71,11 @@ Determining user preferences by collecting data points through interactive poll 
 </div>
 
 
-<footer>
+<footer class="footer">
   <a href="#"> Email Me: velmascoob@velma.com</a>
-  <a href="#"> Instagram</a>
-  <a href="#"> Pinterest</a>
-  <a href="#"> LinkedIn</a>
+  <a href="https://www.instagram.com/scoobydoo/"> Instagram</a>
+  <a href="https://www.pinterest.com/scoobydoo/_created/"> Pinterest</a>
+  <a href="https://www.linkedin.com/in/velma-dinkley-7345b56/"> LinkedIn</a>
 </footer>
 
 
